{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 77,
  "lineage": "4300e2f7-7910-51cb-098a-58e43a635476",
  "resources": [
    {
      "module": "module.create_nat_gateways[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca9b9737af91693d",
            "domain": "vpc",
            "id": "eipalloc-0ca9b9737af91693d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-51-43-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.51.43.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_nat_gateways[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca9b9737af91693d",
            "connectivity_type": "public",
            "id": "nat-01d4d4064d9ee3536",
            "network_interface_id": "eni-0bcbfc22e13510f16",
            "private_ip": "10.0.0.165",
            "public_ip": "52.51.43.205",
            "subnet_id": "subnet-0c18e8f1ae8d7f670",
            "tags": {
              "Name": "GW_subnet-0c18e8f1ae8d7f670"
            },
            "tags_all": {
              "Name": "GW_subnet-0c18e8f1ae8d7f670"
            }
          },
          "dependencies": [
            "module.create_nat_gateways.aws_eip.elastic-ip-address",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_nat_gateways[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0541213b32230ed81",
            "domain": "vpc",
            "id": "eipalloc-0541213b32230ed81",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-228-120-73.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.120.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_nat_gateways[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0541213b32230ed81",
            "connectivity_type": "public",
            "id": "nat-0218000aa5b858f4e",
            "network_interface_id": "eni-0d1fb8f29d488b5c9",
            "private_ip": "10.0.3.73",
            "public_ip": "54.228.120.73",
            "subnet_id": "subnet-084c926be483d359e",
            "tags": {
              "Name": "GW_subnet-084c926be483d359e"
            },
            "tags_all": {
              "Name": "GW_subnet-084c926be483d359e"
            }
          },
          "dependencies": [
            "module.create_nat_gateways.aws_eip.elastic-ip-address",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_private_route_table_associations[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cb83be5b81577a8",
            "route_table_id": "rtb-06d1206121267fe24",
            "subnet_id": "subnet-0dcefaebc1dfd208b"
          },
          "dependencies": [
            "module.create_nat_gateways.aws_eip.elastic-ip-address",
            "module.create_nat_gateways.aws_nat_gateway.NatGw",
            "module.create_private_route_tables.aws_route_table.RouteTable",
            "module.create_private_subnets.aws_subnet.Subnet",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_private_route_table_associations[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081544477b8f46c6a",
            "route_table_id": "rtb-0f6bc762cff98bfd0",
            "subnet_id": "subnet-0f4ffb0c5f7638dd9"
          },
          "dependencies": [
            "module.create_nat_gateways.aws_eip.elastic-ip-address",
            "module.create_nat_gateways.aws_nat_gateway.NatGw",
            "module.create_private_route_tables.aws_route_table.RouteTable",
            "module.create_private_subnets.aws_subnet.Subnet",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_private_route_tables[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:route-table/rtb-06d1206121267fe24",
            "id": "rtb-06d1206121267fe24",
            "owner_id": "405241045532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d4d4064d9ee3536",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTableA"
            },
            "tags_all": {
              "Name": "PrivateRouteTableA"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_nat_gateways.aws_eip.elastic-ip-address",
            "module.create_nat_gateways.aws_nat_gateway.NatGw",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_private_route_tables[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:route-table/rtb-0f6bc762cff98bfd0",
            "id": "rtb-0f6bc762cff98bfd0",
            "owner_id": "405241045532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0218000aa5b858f4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTableB"
            },
            "tags_all": {
              "Name": "PrivateRouteTableB"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_nat_gateways.aws_eip.elastic-ip-address",
            "module.create_nat_gateways.aws_nat_gateway.NatGw",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_private_subnets[\"subnet3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:subnet/subnet-0dcefaebc1dfd208b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcefaebc1dfd208b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405241045532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetA"
            },
            "tags_all": {
              "Name": "PrivateSubnetA"
            },
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "dependencies": [
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_private_subnets[\"subnet4\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:subnet/subnet-0f4ffb0c5f7638dd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ffb0c5f7638dd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405241045532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetB"
            },
            "tags_all": {
              "Name": "PrivateSubnetB"
            },
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "dependencies": [
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_public_route_table_associations[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f6be77e6024128",
            "route_table_id": "rtb-09107d18e2fc6c9a7",
            "subnet_id": "subnet-0c18e8f1ae8d7f670"
          },
          "dependencies": [
            "module.create_public_route_tables.aws_route_table.RouteTable",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_internet_gateway.igw",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_public_route_table_associations[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f3c4c2b51dfb9c5",
            "route_table_id": "rtb-09107d18e2fc6c9a7",
            "subnet_id": "subnet-084c926be483d359e"
          },
          "dependencies": [
            "module.create_public_route_tables.aws_route_table.RouteTable",
            "module.create_public_subnets.aws_subnet.Subnet",
            "module.vpc_ig.aws_internet_gateway.igw",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_public_route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:route-table/rtb-09107d18e2fc6c9a7",
            "id": "rtb-09107d18e2fc6c9a7",
            "owner_id": "405241045532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0188dd57578815369",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ig.aws_internet_gateway.igw",
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_public_subnets[\"subnet1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:subnet/subnet-0c18e8f1ae8d7f670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c18e8f1ae8d7f670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405241045532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetA"
            },
            "tags_all": {
              "Name": "PublicSubnetA"
            },
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "dependencies": [
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_public_subnets[\"subnet2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:subnet/subnet-084c926be483d359e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084c926be483d359e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405241045532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetB"
            },
            "tags_all": {
              "Name": "PublicSubnetB"
            },
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "dependencies": [
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:internet-gateway/igw-0188dd57578815369",
            "id": "igw-0188dd57578815369",
            "owner_id": "405241045532",
            "tags": {
              "Name": "IGW-DEV"
            },
            "tags_all": {
              "Name": "IGW-DEV"
            },
            "vpc_id": "vpc-02a1f342715d45409"
          },
          "dependencies": [
            "module.vpc_ig.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ig",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:405241045532:vpc/vpc-02a1f342715d45409",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020d68265fc5315a6",
            "default_route_table_id": "rtb-000e4fa9fd108cd25",
            "default_security_group_id": "sg-0a1747696af8c3e58",
            "dhcp_options_id": "dopt-005602f97c0276f0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02a1f342715d45409",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000e4fa9fd108cd25",
            "owner_id": "405241045532",
            "tags": {
              "Name": "VPC-DEV"
            },
            "tags_all": {
              "Name": "VPC-DEV"
            }
          }
        }
      ]
    }
  ]
}